refactor: to htmx

--- a/ui/storefront/Areas/Product/Views/Product/Detail.cshtml
+++ b/ui/storefront/Areas/Product/Views/Product/Detail.cshtml
@@ -13,7 +13,7 @@
     <meta name="description" content="@Model.Description"/>
 }
 
-<section class="py-8 bg-white md:py-16 antialiased">
+<section id="product-list-container" class="py-8 bg-white md:py-16 antialiased">
     <div class="max-w-screen-xl px-4 mx-auto 2xl:px-0">
         <div class="lg:grid lg:grid-cols-2 lg:gap-8 xl:gap-16">
             <div class="shrink-0 max-w-md lg:max-w-lg mx-auto">
