--- a/ui/storefront/Areas/User/Views/_ViewImports.cshtml
+++ b/ui/storefront/Areas/User/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Htmx.TagHelpers
+@addTagHelper *, SmartComponents.AspNetCore
