--- a/ui/storefront/Views/_ViewImports.cshtml
+++ b/ui/storefront/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using RookieShop.Storefront.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Htmx.TagHelpers
+@addTagHelper *, SmartComponents.AspNetCore
