--- a/ui/storefront/Areas/Product/Views/Shared/Components/Feedback/Default.cshtml
+++ b/ui/storefront/Areas/Product/Views/Shared/Components/Feedback/Default.cshtml
@@ -30,7 +30,7 @@
                 user-role="@userRole"
                 rows="3" 
                 placeholder="Your review helps other customers to make a decision"
-                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary-300 sm:text-sm sm:leading-6 resize-none"/>
+                class="block w-full rounded-md border-0 py-3 px-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary-300 sm:text-sm sm:leading-6 resize-none"/>
             <span asp-validation-for="Content" class="text-red-900"></span>
         </div>
         <button type="submit" class="text-white mt-4 sm:mt-0 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 focus:outline-none flex items-center justify-center">
