--- a/ui/storefront/Areas/Basket/Views/Shared/Components/CheckOut/Default.cshtml
+++ b/ui/storefront/Areas/Basket/Views/Shared/Components/CheckOut/Default.cshtml
@@ -1,10 +1,9 @@
 ﻿@using System.Globalization
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@using RookieShop.Storefront.Areas.Basket.Models
 @using SmartComponents.AspNetCore
 @model RookieShop.Storefront.Areas.Order.Models.OrderRequest
 
-<form>
+<form x-data="{ paymentMethod: 'Cash' }">
     <label asp-for="Street" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium">
         Street
     </label>
@@ -44,18 +43,18 @@
     <div class="mb-3 flex -mx-2">
         <div class="px-2">
             <label asp-for="PaymentMethod" class="flex items-center cursor-pointer">
-                <input asp-for="PaymentMethod" type="radio" class="form-radio h-5 w-5 text-indigo-500" id="type1" value="@PaymentMethod.Cash" checked/>
+                <input x-model="paymentMethod" type="radio" class="form-radio h-5 w-5 text-indigo-500" id="type1" value="Cash" checked/>
                 <img loading="lazy" src="~/imgs/payment/dollar.png" class="h-8 ml-3" alt="Cash" asp-append-version="true"/>
             </label>
         </div>
         <div class="px-2">
             <label asp-for="PaymentMethod" class="flex items-center cursor-pointer">
-                <input asp-for="PaymentMethod" type="radio" class="form-radio h-5 w-5 text-indigo-500" id="type2" value="@PaymentMethod.Card"/>
+                <input x-model="paymentMethod" type="radio" class="form-radio h-5 w-5 text-indigo-500" id="type2" value="Card"/>
                 <img loading="lazy" src="~/imgs/payment/stripe.png" class="h-8 ml-3" alt="Stripe" asp-append-version="true"/>
             </label>
         </div>
     </div>
-    <div id="card-info-section">
+    <div id="card-info-section" x-show="paymentMethod === 'Card'" x-cloak>
         <label asp-for="CardHolderName" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium">
             Holder Name
         </label>
@@ -117,7 +116,7 @@
             </div>
         </div>
     </div>
-    <hr />
+    <hr/>
     <button class="w-full text-center bg-indigo-600 rounded-xl py-3 px-6 font-semibold text-lg text-white transition-all duration-500 hover:bg-indigo-700 my-6">
         Checkout
     </button>
