--- a/ui/storefront/Areas/User/Views/Customer/Index.cshtml
+++ b/ui/storefront/Areas/User/Views/Customer/Index.cshtml
@@ -48,7 +48,23 @@
             </div>
         </div>
         <div class="mt-10">
-            <button id="submit-btn" type="submit" class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+            <button id="submit-btn" 
+                    type="submit" 
+                    hx-trigger="confirmed"
+                    onClick="Swal.fire({
+                                title: 'Are you sure?',
+                                text: 'You are about to update your personal information.',
+                                icon: 'info',
+                                showCancelButton: true,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                confirmButtonText: 'Yes, update it!',
+                            }).then((result) => {
+                                if (result.isConfirmed) {
+                                    htmx.trigger(this, 'confirmed');
+                                }
+                            });"
+                    class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
                 Submit
             </button>
         </div>
@@ -57,25 +73,4 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial"/>
-
-    <script>
-        $(document).ready(function () {
-            $("#submit-btn").on("click", function () {
-                Swal.fire({
-                    title: "Are you sure?",
-                    text: "You are about to update your personal information.",
-                    icon: "warning",
-                    showCancelButton: true,
-                    confirmButtonColor: "#3085d6",
-                    cancelButtonColor: "#d33",
-                    confirmButtonText: "Yes, update it!",
-                    cancelButtonText: "No, cancel!",
-                }).then((result) => {
-                    if (result.isConfirmed) {
-                        $("form").submit();
-                    }
-                });
-            });
-        });
-    </script>
 }
