--- a/ui/storefront/Views/Shared/_SettingsSubLayout.cshtml
+++ b/ui/storefront/Views/Shared/_SettingsSubLayout.cshtml
@@ -5,7 +5,7 @@
         Layout = "_Layout.cshtml";
 }
 
-<div class="bg-white w-full flex flex-col gap-5 px-3 md:px-16 lg:px-28 md:flex-row text-[#161931]">
+<div id="setting-section" class="bg-white w-full flex flex-col gap-5 px-3 md:px-16 lg:px-28 md:flex-row text-[#161931]">
     <aside class="hidden py-4 md:w-1/3 lg:w-1/4 md:block">
         <div class="sticky flex flex-col gap-2 p-4 text-sm top-12">
             <h2 class="pl-3 mb-4 text-2xl font-semibold">Settings</h2>
