--- a/ui/storefront/Areas/Basket/Views/Shared/Components/CheckOut/Default.cshtml
+++ b/ui/storefront/Areas/Basket/Views/Shared/Components/CheckOut/Default.cshtml
@@ -1,40 +1,39 @@
 ﻿@using System.Globalization
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@using SmartComponents.AspNetCore
+@using RookieShop.Storefront.Areas.Basket.Models
 @model RookieShop.Storefront.Areas.Order.Models.OrderRequest
 
-<form x-data="{ paymentMethod: 'Cash' }">
-    <label asp-for="Street" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium">
-        Street
-    </label>
+<form x-data="{ paymentMethod: 'Cash' }" asp-area="Order" asp-controller="Order" asp-action="CheckOut">
+    <label asp-for="Street" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium"></label>
     <div class="flex pb-4 w-full">
         <div class="relative w-full">
             <input type="text"
                    asp-for="Street"
                    class="block w-full h-11 pr-11 pl-5 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-white border border-gray-300 rounded-lg placeholder-gray-500 focus:outline-gray-400 "
-                   placeholder="Cong Hoa" required/>
+                   placeholder="Cong Hoa"
+                   required/>
         </div>
     </div>
-    <label asp-for="City" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium">
-        City
-    </label>
+    <label asp-for="City" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium"></label>
     <div class="flex pb-4 w-full">
         <div class="relative w-full">
             <input type="text"
                    asp-for="City"
+                   data-smartpaste-description="The city or district where you live, exclude Ho Chi Minh City, Ha Noi, Da Nang, Can Tho, Hai Phong because they are provinces"
                    class="block w-full h-11 pr-11 pl-5 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-white border border-gray-300 rounded-lg placeholder-gray-500 focus:outline-gray-400 "
-                   placeholder="Tan Binh" required/>
+                   placeholder="Tan Binh" 
+                   required/>
         </div>
     </div>
-    <label asp-for="Province" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium">
-        Province
-    </label>
+    <label asp-for="Province" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium"></label>
     <div class="flex pb-4 w-full">
         <div class="relative w-full">
             <input type="text"
                    asp-for="Province"
+                   data-smartpaste-description="The province of the city where you live"
                    class="block w-full h-11 pr-11 pl-5 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-white border border-gray-300 rounded-lg placeholder-gray-500 focus:outline-gray-400 "
-                   placeholder="Ho Chi Minh" required/>
+                   placeholder="Ho Chi Minh"
+                   required/>
         </div>
     </div>
     <label asp-for="PaymentMethod" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium">
@@ -43,21 +42,30 @@
     <div class="mb-3 flex -mx-2">
         <div class="px-2">
             <label asp-for="PaymentMethod" class="flex items-center cursor-pointer">
-                <input x-model="paymentMethod" type="radio" class="form-radio h-5 w-5 text-indigo-500" id="type1" value="Cash" checked/>
+                <input x-model="paymentMethod" 
+                       type="radio" 
+                       data-smartpaste-description="True if the card holder name, card number, ccv is empty"
+                       class="form-radio h-5 w-5 text-indigo-500" 
+                       id="type1" 
+                       value="@PaymentMethod.Cash" 
+                       checked/>
                 <img loading="lazy" src="~/imgs/payment/dollar.png" class="h-8 ml-3" alt="Cash" asp-append-version="true"/>
             </label>
         </div>
         <div class="px-2">
             <label asp-for="PaymentMethod" class="flex items-center cursor-pointer">
-                <input x-model="paymentMethod" type="radio" class="form-radio h-5 w-5 text-indigo-500" id="type2" value="Card"/>
+                <input x-model="paymentMethod" 
+                       type="radio" 
+                       data-smartpaste-description="True if the card holder name, card number, ccv is not empty"
+                       class="form-radio h-5 w-5 text-indigo-500" 
+                       id="type2" 
+                       value="@PaymentMethod.Card"/>
                 <img loading="lazy" src="~/imgs/payment/stripe.png" class="h-8 ml-3" alt="Stripe" asp-append-version="true"/>
             </label>
         </div>
     </div>
     <div id="card-info-section" x-show="paymentMethod === 'Card'" x-cloak>
-        <label asp-for="CardHolderName" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium">
-            Holder Name
-        </label>
+        <label asp-for="CardHolderName" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium"></label>
         <div class="flex pb-4 w-full">
             <div class="relative w-full">
                 <input type="text"
@@ -66,9 +74,7 @@
                        placeholder="John Smith"/>
             </div>
         </div>
-        <label asp-for="CardNumber" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium">
-            Card Number
-        </label>
+        <label asp-for="CardNumber" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium"></label>
         <div class="flex pb-4 w-full">
             <div class="relative w-full">
                 <input type="text"
@@ -84,6 +90,7 @@
             <div class="px-2 w-full">
                 <div class="relative w-full">
                     <select asp-for="ExpiryMonth" class="block w-full h-11 pr-11 pl-5 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-white border border-gray-300 rounded-lg placeholder-gray-500 focus:outline-gray-400">
+                        <option value="@null" selected>MM</option>
                         @for (var month = 1; month <= 12; month++)
                         {
                             var cultureMonth = month;
@@ -95,6 +102,7 @@
             <div class="px-2 w-full">
                 <div class="relative w-full">
                     <select asp-for="ExpiryYear" class="block w-full h-11 pr-11 pl-5 py-2.5 text-base font-normal shadow-xs text-gray-900 bg-white border border-gray-300 rounded-lg placeholder-gray-500 focus:outline-gray-400">
+                        <option value="@null" selected>YY</option>
                         @for (var value = DateTime.Now.Year; value < DateTime.Now.Year + 10; value++)
                         {
                             var year = value;
@@ -104,9 +112,7 @@
                 </div>
             </div>
         </div>
-        <label asp-for="Cvc" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium">
-            CVC/CVV
-        </label>
+        <label asp-for="Cvc" class="flex items-center mb-1.5 text-gray-400 text-sm font-medium"></label>
         <div class="flex pb-4 w-full">
             <div class="relative w-full">
                 <input type="text"
@@ -122,6 +128,6 @@
     </button>
     <smart-paste-button class="w-full text-center bg-stone-600 rounded-xl py-3 px-6 font-semibold text-lg text-white transition-all duration-500 hover:bg-stone-700">
         <img loading="lazy" src="~/imgs/payment/smart-paste.svg" class="h-6 inline-block mr-2" alt="Paste" asp-append-version="true"/>
-        Smart paste
+        Smart Paste
     </smart-paste-button>
 </form>
